📃 docs: chap10 upd

--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -58,97 +58,9 @@ struct Cls { ty data_mem; void prints() { cout << data_mem << " " << int_par << 
 > 函数模板支持重载，只要该模板的模板形参表或者函数形参表不一致就行。
 > 类模板不支持重载，所以类名相同但模板形参表不同的模板会导致重复定义；而且同作用域下的类模板名也不能与其他的类类型同名。
 
-和函数形参一样，非参数包的模板形参和函数模板中的非参数包的函数形参都可以有默认实参，它们的规则大部分与普通默认实参的规则一样(比如默认实参要放在形参表末尾等)，只有以下的区别：
-* 对于模板形参的默认实参来说：
-  同一个模板中，==前面的模板形参可以作为后面模板形参的默认实参==。
-  一个模板的声明(包括模板友元的声明语句)和定义如果不在同一个文件中，则可以对同一个模板形参有不同的默认实参，但是该模板形参的默认实参只会按照该形参第一个出现的默认实参来决定。
-  如果在同一个文件中，则有以下特性：
-  1. 对于函数模板来说，默认实参只能在该模板第一次出现的语句中(声明或定义语句都可以，也包括模板友元的声明语句)，其他语句出现的默认实参无效。
-     ```c++
-     #include <iostream>
-     // Prints第一次出现的语句，声明语句，T2带有默认实参
-     template<typename T, typename T2 = T>
-     void Prints(const T& obj);
-     // Prints的定义语句
-     template<typename T, typename T2>
-     void Prints(const T& obj)
-     {
-        std::cout << obj << std::endl;
-     }
-     // Prints2第一次出现的语句，声明语句，没有默认实参
-     template<typename T, typename T2>
-     void Prints2(const T& obj);
-     // Prints的定义语句，T1，T2带有默认实参，但因为函数模板的默认实参只能在该模板第一次出现的语句中，所以模板实参推断无效
-     template<typename T = int32_t, typename T2 = int32_t>
-     void Prints2(const T& obj)
-     {
-        std::cout << obj << std::endl;
-     }
-     int main()
-     {
-        // 调用正确，T被模板实参推断为int
-        Prints(1548);
-        // 调用错误，T2的默认实参无效，模板实参推断无效。
-        Prints2(1548, 887);
-        return 0;
-     }
-     ```
-  2. 对于类模板来说，默认实参可以出现在任意的声明或定义语句中（包括模板友元的声明语句），只要遵循默认实参放在形参表末尾且同一形参没有多个默认实参的规则就行。
-     ```c++
-     // Cls声明语句，没有默认实参
-     template<typename T, typename T2>
-     class Cls;
-     // Cls定义语句，T2带有默认实参
-     template<typename T, typename T2 = T>
-     class Cls{};
+## 10.4 模板参数
 
-     int main()
-     {
-         // 调用正确，T2被默认实参指定为int32_t
-         Cls<int32_t> cls;
-     }
-     ```
-* 对于函数形参的默认实参来说：
-  不能像普通函数一样可以用多个声明来添加默认实参。
-  默认实参只能在该模板第一次出现的语句中(声明或定义语句都可以，也包括模板友元的声明语句)，其他语句都不能出现默认实参。
-  和普通函数一样，函数的==局部变量，包括其他形参都不能作为该函数的默认实参==。
-
-```c++
-// 函数模板prints的声明，三个模板形参都有了默认实参
-template <class = string, class = int, int = 5> void prints();
-// 函数模板prints的定义
-template <class ty1, class ty2, int val> 
-void prints() 
-{ 
-    ty1 str = "str "; 
-    ty2 ins = 58;
-    cout << str << ins; 
-}
-// 错误，同一个文件中同一个参数的默认实参只能出现一次。
-template <class, class, int = 55> void prints();
-// 输出str 58
-prints();
-
-// 函数模板，取最大值
-// 因为AType在ResType之前，所以ResType的默认实参可以为AType
-template<class AType, class BType, class ResType = AType>
-ResType Max(AType a, BType b)
-{
-    return a > b ? a: b;
-}
-
-int main()
-{
-    // ResType与AType类型相同，都为int
-    // dou的值为87
-    double dou = Max(15,87.8);
-    // 输出为87
-    std::cout << dou << std::endl;
-    return 0;
-}
-```
-
-## 10.4 模板形参
+### 10.41 模板形参
 
 模板参数遵循普通的作用域规则，一个模板参数名的可用范围是在其声明之后，至模板声明或定义结束之前。
 与任何其他名字一样，模板参数会隐藏外层作用域中声明的相同名字。
@@ -228,7 +140,7 @@ int main()
 * 非类型形参
 * 模板类形参
 
-### 10.41 类型形参
+#### 10.411 类型形参
 
 类型形参在模板形参的声明形式为：
 > typename/class 类型形参名
@@ -262,7 +174,7 @@ class FunctionDiff {};
 FunctionDiff<int(int, int)> g_obj;
 ```
 
-### 10.42 非类型形参
+#### 10.412 非类型形参
 
 非类型形参在模板形参的声明形式为：
 > 类型说明符(可含类型修饰符) 非类型形参名
@@ -328,7 +240,7 @@ int main()
 }
 ```
 
-### 10.43 模板类形参
+#### 10.413 模板类形参
 
 对于模板形参来说，还有一种特殊的形参，也就叫做模板类形参。
 我们可以将一个类模板当做某个模板形参来使用，此时我们只需要在模板形参表写上关键字`template`、对应类模板的模板形参表和关键字`typename`或`class`就行。
@@ -361,7 +273,7 @@ struct Cls
 prints<Cls>();
 ```
 
-### 10.44 可变数目形参
+#### 10.414 可变数目形参
 
 可变数目形参就是指一个可以接受零个或多个对应类型实参的特殊形参，可变数目形参也叫做参数包(parameter packet)。
 
@@ -376,7 +288,7 @@ C++中存在两种参数包：
 
 不管是哪一种参数包，含有参数包的形参表都还可以含有其他的非参数包形参，但是每个形参表最多只能含有一个参数包，且必须要放在该形参表的末尾。
 
-#### 10.441 模板参数包
+##### 10.4141 模板参数包
 
 含有模板参数包的模板叫做可变参数模板(variadic template)。
 
@@ -421,11 +333,11 @@ struct Cls {};
 Cls<15,8,123,25,8> obj;
 ```
 
-#### 10.442 函数参数包
+##### 10.4142 函数参数包
 
-函数参数包的介绍详见<a href="#1046121-函数参数包"><span style="color:green;font:normal bold 18px '楷体'">函数参数包</span></a>
+函数参数包的介绍详见<a href="#1041612-包扩展的作用"><span style="color:green;font:normal bold 18px '楷体'">函数参数包</span></a>
 
-### 10.45 非参数包的模板形参使用
+#### 10.415 非参数包的模板形参使用
 
 各种非参数包的模板形参可以根据自身的类型，用在模板各种能用该类型的地方。
 比如类型形参可以用于各种需要类型的地方，比如当做函数返回类型、形参类型、变量类型等；非类型形参可以当作函数默认实参或者用于需要值的某些类型中等；模板类形参以此类推。
@@ -465,7 +377,7 @@ struct Cls
 prints(Cls());
 ```
 
-### 10.46 参数包的使用
+#### 10.416 参数包的使用
 
 参数包并不是普通的形参，它是包含了多个同类型参数的形参。
 
@@ -475,11 +387,11 @@ prints(Cls());
 
 > 参数包或者包扩展不能单独成为一个语句，也就是不能单独使用，必须要结合其他真正能用上的操作才行。
 
-#### 10.461 包扩展
+##### 10.4161 包扩展
 
 包扩展是使用参数包最基本的用法，我们只有扩展（expand）了某个参数包后，才能使用该参数包。
 
-##### 10.4611 包扩展的形式
+###### 10.41611 包扩展的形式
 
 包扩展的形式为：
 > 扩展模式...
@@ -503,7 +415,7 @@ prints(objs)...
 
 > 未命名的参数包无法扩展，因为无法指定未命名的对象。
 
-##### 10.4612 包扩展的作用
+###### 10.41612 包扩展的作用
 
 包的扩展就是将该参数包在使用扩展的位置替换为一个包含该参数包所有参数的列表，该列表中的每个参数都应用了其扩展模式，该列表没有括号包围，且每个参数之间由逗号`,`分隔。
 
@@ -525,7 +437,7 @@ prints(obj1), prints(obj2), prints(obj3), ···
 prints(objs)...
 ```
 
-###### 10.46121 函数参数包
+**函数参数包**
 
 对于类型模板参数包和模板类模板参数包来说，它们的扩展还有另一种作用，就是可以声明函数参数包。
 
@@ -576,7 +488,7 @@ int main()
 
 > 调用包含函数参数包的函数时(包括函数模板实例)，该函数参数包所接受的实参数量不能小于声明该参数包的模板参数包所含的参数数量(主要说的是非模板实参推断的实例化)，否则出错。
 
-#### 10.462 获取参数包的大小
+##### 10.4162 获取参数包的大小
 
 当我们需要知道包中含有多少参数时，可以使用`sizeof...`运算符。
 
@@ -601,6 +513,125 @@ int main()
 {
     // 输出5
     prints(3.15, "str", 2, true, 's');
+    return 0;
+}
+```
+
+### 10.42 模板默认实参
+
+和函数形参一样，非参数包的模板形参和函数模板中的非参数包的函数形参都可以有默认实参，它们的规则大部分与普通默认实参的规则一样(比如默认实参要放在形参表末尾等)，只有以下的区别：
+* 对于非参数包模板形参的默认实参来说：
+  同一个模板中，==前面的模板形参可以作为后面模板形参的默认实参==。
+  一个模板的声明(包括模板友元的声明语句)和定义如果不在同一个文件中，则可以对同一个模板形参有不同的默认实参，但是该模板形参的默认实参只会按照该形参第一个出现的默认实参来决定。
+  如果在同一个文件中，则有以下特性：
+  1. 对于函数模板来说，默认实参只能在该模板第一次出现的语句中(声明或定义语句都可以，也包括模板友元的声明语句)，其他语句出现的默认实参无效。
+     ```c++
+     #include <iostream>
+     // Prints第一次出现的语句，声明语句，T2带有默认实参
+     template<typename T, typename T2 = T>
+     void Prints(const T& obj);
+     // Prints的定义语句
+     template<typename T, typename T2>
+     void Prints(const T& obj)
+     {
+        std::cout << obj << std::endl;
+     }
+     // Prints2第一次出现的语句，声明语句，没有默认实参
+     template<typename T, typename T2>
+     void Prints2(const T& obj);
+     // Prints的定义语句，T1，T2带有默认实参，但因为函数模板的默认实参只能在该模板第一次出现的语句中，所以模板实参推断无效
+     template<typename T = int32_t, typename T2 = int32_t>
+     void Prints2(const T& obj)
+     {
+        std::cout << obj << std::endl;
+     }
+     int main()
+     {
+        // 调用正确，T被模板实参推断为int
+        Prints(1548);
+        // 调用错误，T2的默认实参无效，模板实参推断无效。
+        Prints2(1548, 887);
+        return 0;
+     }
+     ```
+  2. 对于类模板来说，默认实参可以出现在任意的声明或定义语句中（包括模板友元的声明语句），只要遵循默认实参放在形参表末尾且同一形参没有多个默认实参的规则就行。
+     ```c++
+     // Cls声明语句，没有默认实参
+     template<typename T, typename T2>
+     class Cls;
+     // Cls定义语句，T2带有默认实参
+     template<typename T, typename T2 = T>
+     class Cls{};
+
+     int main()
+     {
+         // 调用正确，T2被默认实参指定为int32_t
+         Cls<int32_t> cls;
+     }
+     ```
+* 对于函数模板中非参数包的函数形参的默认实参来说：
+  不能像普通函数一样可以用多个声明来添加默认实参。
+  默认实参只能在该模板第一次出现的语句中(声明或定义语句都可以，也包括模板友元的声明语句)，其他语句都不能出现默认实参。
+  和普通函数一样，函数的==局部变量，包括其他形参都不能作为该函数的默认实参==。
+
+  ```c++
+  // 函数模板prints的声明，三个模板形参都有了默认实参
+  template <class = string, class = int, int = 5> void prints();
+  // 函数模板prints的定义
+  template <class ty1, class ty2, int val> 
+  void prints() 
+  { 
+      ty1 str = "str "; 
+      ty2 ins = 58;
+      cout << str << ins; 
+  }
+  // 错误，同一个文件中同一个参数的默认实参只能出现一次。
+  template <class, class, int = 55> void prints();
+  // 输出str 58
+  prints();
+
+  // 函数模板，取最大值
+  // 因为AType在ResType之前，所以ResType的默认实参可以为AType
+  template<class AType, class BType, class ResType = AType>
+  ResType Max(AType a, BType b)
+  {
+      return a > b ? a: b;
+  }
+
+  int main()
+  {
+      // ResType与AType类型相同，都为int
+      // dou的值为87
+      double dou = Max(15,87.8);
+      // 输出为87
+      std::cout << dou << std::endl;
+      return 0;
+  }
+  ```
+
+> **注意：** 对于模板实参全部有默认实参的类模板来说，使用该模板时仍需加上空的显式实参表，否则会编译出错。
+
+```c++
+// 模板实参全部有默认实参的函数模板
+// 使用时可以不用加空的显式实参表
+template<class T = int>
+T prints() { return T{}; }
+
+// 模板实参全部有默认实参的函数模板
+// 使用时必须要加空的显式实参表
+template <class T = int>
+class Coke{};
+
+int main()
+{
+    // 编译错误
+    Coke obj;
+    // 正确
+    Coke<> obj2;
+    // 正确
+    prints();
+    // 正确
+    prints<>();
     return 0;
 }
 ```
