📃 docs: chap 8: completed the sample of arithmetic operator

--- a/files/第8章_重载运算符.md
+++ b/files/第8章_重载运算符.md
@@ -346,6 +346,12 @@ public:
         this->val_ /= obj.val_;
         return *this;
     }
+    // 除余赋值运算符
+    Cls& operator%=(const Cls& obj)
+    {
+        this->val_ %= obj.val_;
+        return *this;
+    }
 };
 
 int main()
@@ -365,6 +371,9 @@ int main()
     obj -= obj2;
     // 输出5
     std::cout << obj.val_ << std::endl;
+    obj2 %= obj;
+    // 输出3
+    std::cout << obj2.val_ << std::endl;
     return 0;
 }
 ```
@@ -407,6 +416,12 @@ public:
     Cls& operator/=(const Cls& obj)
     {
         this->val_ /= obj.val_;
+        return *this;
+    }
+    // 除余赋值运算符
+    Cls& operator%=(const Cls& obj)
+    {
+        this->val_ %= obj.val_;
         return *this;
     }
     // 正号运算符（一元）
@@ -455,6 +470,14 @@ Cls operator/(const Cls& a, const Cls& b)
     return res;
 }
 
+// 除余运算符
+Cls operator%(const Cls& a, const Cls& b)
+{
+    Cls res = a;
+    res %= b;
+    return res;
+}
+
 int main()
 {
     // 类Cls的对象
@@ -472,6 +495,8 @@ int main()
     std::cout << (obj * obj2).val_ << std::endl;
     // 输出0
     std::cout << (obj / obj2).val_ << std::endl;
+    // 输出3
+    std::cout << (obj2 % obj).val_ << std::endl;
     return 0;
 }
 ```
