--- a/files/第8章_重载运算符.md
+++ b/files/第8章_重载运算符.md
@@ -424,17 +424,15 @@ public:
         this->val_ %= obj.val_;
         return *this;
     }
-    // 正号运算符（一元）
-    Cls operator+()
+    // 正号运算符（一元），不改变对象的状态，所以一般为常量
+    Cls operator+() const
     {
-        return *this;
+        return Cls(val_);
     }
-    // 负号运算符（一元）
-    Cls operator-()
+    // 负号运算符（一元），不改变对象的状态，所以一般为常量
+    Cls operator-() const
     {
-        Cls res = *this;
-        res.val_ = -res.val_;
-        return res;
+        return Cls(-val_);
     }
 };
 
@@ -481,22 +479,22 @@ Cls operator%(const Cls& a, const Cls& b)
 int main()
 {
     // 类Cls的对象
-    Cls obj(5);
-    Cls obj2(53);
+    const Cls kObj(5);
+    const Cls kObj2(53);
     // 输出-5
-    std::cout << (-obj).val_ << std::endl;
+    std::cout << (-kObj).val_ << std::endl;
     // 输出53
-    std::cout << (+obj2).val_  << std::endl;
+    std::cout << (+kObj2).val_  << std::endl;
     // 输出58
-    std::cout << (obj + obj2).val_ << std::endl;
+    std::cout << (kObj + kObj2).val_ << std::endl;
     // 输出-48
-    std::cout << (obj - obj2).val_ << std::endl;
+    std::cout << (kObj - kObj2).val_ << std::endl;
     // 输出265
-    std::cout << (obj * obj2).val_ << std::endl;
+    std::cout << (kObj * kObj2).val_ << std::endl;
     // 输出0
-    std::cout << (obj / obj2).val_ << std::endl;
+    std::cout << (kObj / kObj2).val_ << std::endl;
     // 输出3
-    std::cout << (obj2 % obj).val_ << std::endl;
+    std::cout << (kObj2 % kObj).val_ << std::endl;
     return 0;
 }
 ```
