📃 docs: chap 7 deprived list

--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -69,6 +69,8 @@
 通常在层次关系的根部有一个基类(base class)，其他类则直接或间接地从基类继承而来，这些继承得到的类称为派生类(derived class)。
 一般来说，基类负责定义在层次关系中所有类共同拥有的成员，而每个派生类定义各自特有的成员。
 
+> **注意**：**被继承的类只能是类类型**，不能是系统内置的类型（包括基本类型，复合类型、枚举、共用体等类型）。
+
 一个类可以同时继承任意多个直接基类，这也叫作多重继承(multiple inheritance)，多重继承的派生类继承了所有父类的属性。
 
 通常情况，一个派生类会继承其每个直接基类的所有成员(包括直接基类所定义的类和类型别名)，不存在只继承一部分这种行为。
