📃 docs: chap5 inline function modified

--- a/files/第5章_函数.md
+++ b/files/第5章_函数.md
@@ -245,7 +245,7 @@ cout << shorterString (s1, s2) << endl;
 
 > 同一文件的同一个函数的声明和定义语句中是否含有关键字inline可以不一致，==以函数的定义语句为主==。
 
-内联函数因为其性质，所以可以在将要链接的各个不同文件中都定义其函数。
+内联函数因为其性质，所以可以在将要链接的各个**不同文件中**都定义其函数（不能在同一个文件定义多个首部相同或不满足重载的内联函数，会出现重定义错误）。
 
 调用该内联函数的调用点所使用的函数，是调用点对应文件里的该函数的定义版本，如果调用点对应文件里只有该函数的声明而没有定义，则会出错。
 所以对于内联函数来说，要在每个文件中都有其定义。
