--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -158,7 +158,7 @@ template<typename ty, class ty2>
 void prints(ty val, ty2 val2) { }
 ```
 
-类型形参的实参还可以结合一些符号形成一些特殊的形式：
+类型形参的实参还可以结合一些符号形成一些特殊的形式（因为函数的首部可以看作为某种函数指针类型）：
 
 ```c++
 /**
@@ -172,6 +172,57 @@ class FunctionDiff {};
 // 定义正确，可以使用括号结合多个类型。
 // 该形式源于functional头文件function的定义。
 FunctionDiff<int(int, int)> g_obj;
+```
+
+```c++
+// 普通函数，首部为void ()
+void prints()
+{
+    std::cout << "normal callable" << std::endl;
+}
+
+// 函数指针，首部为void ()
+auto g_func_ptr = prints;
+
+// 重载可调用运算符的对象，首部为void ()
+class Function
+{
+public:
+    int operator()()
+    {
+        std::cout << "override opearator call" << std::endl;
+        return 0;
+    }
+};
+
+// lambda对象，首部为void ()
+auto g_func = [] () -> auto { std::cout << "lambda" << std::endl; return 3.6; };
+
+// function对象，首部为void ()
+std::function<void ()> g_ffunc = prints;
+
+/**
+ * @brief 接收任何空形参表的可调用对象。
+ * @note 要注意Signature不能是非空形参表的可调用对象或者非可调用对象
+ * @tparam Signature 
+ * @param func 
+ */
+template<typename Signature>
+void runVoidFunction(Signature func) // func的类型不能加任何的修饰词，限定词
+{
+    func();
+}
+
+int main()
+{
+    Function op_func;
+    runVoidFunction(prints);
+    runVoidFunction(g_func_ptr);
+    runVoidFunction(op_func);
+    runVoidFunction(g_func);
+    runVoidFunction(g_ffunc);
+    return 0;
+}
 ```
 
 #### 10.412 非类型形参
