🦄 refactor: chap10 type parameter

--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -175,6 +175,9 @@ FunctionDiff<int(int, int)> g_obj;
 ```
 
 ```c++
+#include <iostream>
+#include <functional>
+
 // 普通函数，首部为void ()
 void prints()
 {
