📃 docs: chap12 the finding of name in namesapce

--- a/files/第12章_命名空间.md
+++ b/files/第12章_命名空间.md
@@ -354,8 +354,46 @@ int main()
 
 对命名空间内部名字的查找(包括类的成员)遵循常规的查找规则：即由内向外依次査找每个外层作用域。
 
-外层作用域也可能是一个或多个嵌套的命名空间，直到最外层的全局命名空间查找过程终止。
-只有位于使用点之前声明的名字才被考虑。
+外层作用域也可能是一个或多个嵌套的命名空间，直到最外层的全局命名空间查找过程终止。只有位于使用点之前声明的名字才被考虑。
+
+> 所以如果某命名空间中不含嵌套的同名命名空间，则该命名空间的成员定义可以使用本身自己的命名空间名及作用域运算符来调用本身自己命名空间的成员。
+
+```c++
+// 命名空间ns
+namespace ns
+{
+    int g_ins = 5;
+}
+
+// 命名空间ns
+namespace ns
+{
+    // 查找到本身ns的g_ins
+    int g_ins2 = g_ins;
+    // 查找到本身ns的g_ins
+    int g_ins3 = ns::g_ins;
+}
+
+// 命名空间ns2
+namespace ns2
+{
+    double g_dou = 5.5;
+}
+
+// 命名空间ns2
+namespace ns2
+{
+    // 命名空间ns2::ns2
+    namespace ns2
+    {
+        double g_dou = 7.99;
+    }
+    // 查找到本身ns2的g_dou
+    double g_dou3 = g_dou;
+    // 查找到ns2::ns2的g_dou2
+    double g_dou4 = ns2::g_dou;
+}
+```
 
 ### 12.42 函数匹配
 
