📃 docs: chap2-1 static object

--- a/files/第2章_基本类型与变量.md
+++ b/files/第2章_基本类型与变量.md
@@ -661,8 +661,66 @@ int main()
 存储说明符register叫做寄存器存储符，当一些局部对象使用频繁，每次从内存存取花费时间高，所以可以声明对象为register使其存储在cpu的寄存器中，寄存器读取速度远高于内存速度，因此可以提高执行效率。但现在大多数编译器能够自动识别使用频繁的局部对象并将其放入寄存器中，所以实际上可以无需显式指定对象为register。
 默认情况下，全局对象是放在静态存储区，局部对象是在栈区的。
 
-***注意***
-*static存储说明符有两种作用，作用于全局对象则是改变其作用域，作用于局部对象则是改变其生存期。*
+> **注意**，static存储说明符有两种作用：
+> * 作用于*全局对象*则是*改变其作用域*。
+> * 作用于*局部对象*则是*改变其生存期*。
+
+因为用static存储说明符修饰的局部对象（包括函数以及类类型静态与非静态成员函数中的局部对象）为静态内存对象，因此其在运行过程中只会执行一次初始化，而且在程序运行过程中不被释放其内存。
+
+```c++
+#include <iostream>
+#include <string>
+
+// 全局函数，带有一个静态局部对象
+void prints()
+{
+    static int i = 0;
+    std::cout << ++i << std::endl;
+}
+
+class Cls
+{
+public:
+    // 成员函数，带有一个静态局部对象
+    void prints()
+    {
+        static double j = 0;
+        j += 1.12;
+        std::cout << j << std::endl;
+    }
+    // 静态成员函数，带有一个静态局部对象
+    static void prints2()
+    {
+        static double k = 0;
+        k += 2.25;
+        std::cout << k << std::endl;
+    }
+};
+
+int main()
+{
+    // 输出1
+    prints();
+    // 输出2
+    prints();
+    // 输出2.25
+    Cls::prints2();
+    Cls obj;
+    // 输出1.12
+    obj.prints();
+    // 输出4.5
+    obj.prints2();
+    // 输出2.24
+    obj.prints();
+    // 输出6.75
+    obj.prints2();
+    // 输出9
+    Cls::prints2();
+    // 输出11.25
+    Cls::prints2();
+    return 0;
+}
+```
 
 ### 2.3 类型转换
 
