🦄 refactor: chap12 namespace infos added

--- a/files/第12章_命名空间.md
+++ b/files/第12章_命名空间.md
@@ -229,6 +229,36 @@ namespace ns
 > namespace 别名 = 命名空间名;
 
 声明的别名不能是该语句所在作用域中的其他命名空间名，否则会有重复定义错误。
+而且声明后的别名不能用于该命名空间成员的声明或定义，只能用于被调用。
+
+```c++
+// 正确，ns命名空间的成员定义
+namespace ns
+{
+    int ins = 55;
+}
+// 正确，ns命名空间的成员定义
+namespace ns
+{
+    double dou = 55.5;
+}
+
+// ns命名空间别名nc
+namespace nc = ns;
+
+// 重复定义错误，别名nc不能用于后续ns命名空间成员的声明或定义
+namespace nc
+{
+    double dou2 = 55.5;
+}
+
+// 正确，ns命名空间的成员定义
+namespace ns
+{
+    double dou3 = 55.55;
+}
+```
+
 但可以与所在作用域的外层作用域的命名空间同名，此时会在该语句所在作用域中隐藏掉外层的同名命名空间。
 
 声明语句中的命名空间名可以是嵌套在命名空间中的命名空间，但不能是未命名或者未定义的命名空间。
