the sign recognized emphasize

--- a/files/第2章_基本类型与变量2.md
+++ b/files/第2章_基本类型与变量2.md
@@ -29,7 +29,7 @@
 某些类型修饰符可以同时存在于一个声明语句中。
 当某类型修饰符作用于变量时，是对其作用的那个变量起作用，并不能影响到其他变量，所以要注意在一个声明语句中存在多个变量声明的情况。
 
->面对一条比较复杂的有多个类型修饰符的声明语句时，*要根据每个类型修饰符的修饰实体与放置位置，从里到外(有圆括号从圆括号内读)，从右向左开始阅读，离修饰实体最近的符号对变量的类型有最直接的影响*，这样有助于弄清楚它的真实含义。
+>面对一条比较复杂的有多个类型修饰符的声明语句时，==要根据每个类型修饰符的修饰实体与放置位置，从里到外(有圆括号从圆括号内读)，从右向左开始阅读，离修饰实体最近的符号对变量的类型有最直接的影响==，这样有助于弄清楚它的真实含义。
 如：
 > ```int *(&arry)[10] = ptrs; //arry是数组的引用，该数组含有10个指针```
 
