📃 docs: chap7: updated static mem init in inner class

--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -571,6 +571,7 @@ double Cls::dou = 78.6;
 能在类内定义的静态数据成员必须是以下几种形式，其他的静态数据成员都不能在类内定义：
 1. const int类型，且初始值必须为常量表达式。
 2. constexpr类型，且初始值必须为常量表达式。
+3. 被inline修饰的任何类型，此时初始值可以是任意表达式。
 
 #### 7.441 数据成员初始化流程
 
