📃 docs: chap6 sp upd

--- a/files/第6章_动态内存管理.md
+++ b/files/第6章_动态内存管理.md
@@ -698,7 +698,7 @@ p|将智能指针p用作一个条件判断，若p指向一个对象，则为true
 *p|解引用智能指针p,获得它指向的对象
 p->mem|访问智能指针p所指向对象的成员<br>等价于(*p).mem
 p.get()|返回一个指向智能指针p所指对象的对应类型的指针。<br>(不会引起p计数器的变化)<br>要小心使用，因为此时智能指针仍有该对象的内存管理所有权。因此，若智能指针释放了其对象，返回的指针所指向的对象也就消失了。
-swap(p,q) <br> p.swap(q)|交换同类型的智能指针p和q中的保存的地址。(还会交换p和q中计数器的值)
+swap(p,q) <br> p.swap(q)|交换同类型的智能指针p和q中的保存的地址。(还会交换p和q中计数器的值、分配器以及删除器等)
 
 ##### 6.411 shared_ptr类
 
