📃 docs: chap3 express sample modified

--- a/files/第3章_表达式.md
+++ b/files/第3章_表达式.md
@@ -146,14 +146,14 @@ int i = fl () * f2 ();
 ```
 
 ```c++
-/* 因为程序是未定义
+/* 因为求值顺序是未定义
 的，所以我们无法推断它的行为。编译器可能
 先求++i的值再求i的值，此时输出结果是1 1;
 也可能先求i的值再求的值，输出结果是0 1;
 甚至编译器还可能做完全不同的操作。
 */
 int i = 0;
-cout « i << ’’ ” << ++i « endl; // 未定义的
+std::cout << "before: " << i << ", after: " << ++i « endl; // 未定义的
 ```
 
 c++的所有运算符中，有四种运算符明确规定了运算对象的求值顺序，后面的内容会详细介绍着四种运算符的求值顺序。
