📃 docs: modified copy mem samples

--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -3587,9 +3587,9 @@ delete ptr;
 和默认构造函数一样，所有的拷贝控制成员都有编译器自动合成的版本，也分为隐式合成和显式合成。
 
 所有拷贝控制成员的合成版本都有如下特性：
-1. 所有非析构函数的拷贝控制成员的合成版本会自动把赋值对象的每个非静态数据成员赋值到被赋值对象对应的成员中。
+1. 所有非析构函数的拷贝控制成员的合成版本会自动把赋值对象的每个非静态数据成员初始化(/赋值)到被赋值对象对应的成员中。
 2. 析构函数不管是不是合成版本，其都会在该对象销毁时自动调用非静态数据成员自己的析构函数。
-3. 函数体为空。
+3. 析构函数的拷贝控制成员的函数体为空；非析构函数的拷贝控制成员的函数体只存在非静态数据成员的赋值语句。
 4. 如果其类型为字面值类型，则合成版本的构造函数成员都为constexpr函数，其他合成的拷贝控制成员则不为constexpr函数。
 
 以下为各个拷贝控制成员的函数声明，假设类名为`Cls`，且含有某些非静态数据成员，则其合成的拷贝成员的定义一般如下所示：
@@ -3604,15 +3604,25 @@ class Cls
     std::string str_;
 
     /**
-     *  以下为编译器可能会合成的拷贝成员版本的定义
+     *  以下为编译器合成的拷贝成员版本的可能定义形式
      *  // 合成的拷贝构造函数
      *  Cls(const Cls& obj): ins_(obj.ins_), dou_(obj.dou_), str_(obj.str_) {}
      *  // 合成的移动构造函数
      *  Cls(Cls&& obj): ins_(obj.ins_), dou_(obj.dou_), str_(obj.str_) {}
      *  // 合成的拷贝赋值运算符
-     *  Cls& operator=(const Cls& obj): ins_(obj.ins_), dou_(obj.dou_), str_(obj.str_) {}
+     *  Cls& operator=(const Cls& obj)
+        {
+            ins_ = obj.ins_;
+            dou_ = obj.dou_;
+            str_ = obj.str_;
+        }
      *  // 合成的移动赋值运算符
-     *  Cls& operator=(Cls&& obj): ins_(obj.ins_), dou_(obj.dou_), str_(obj.str_) {}
+     *  Cls& operator=(Cls&& obj)
+        {
+            ins_ = obj.ins_;
+            dou_ = obj.dou_;
+            str_ = obj.str_;
+        }
      *  // 合成的析构函数
      *  ~Cls() {}
      * 
