--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -1600,7 +1600,7 @@ r2.prints("strs");
 这时，可以使用作用域运算符来实现这一目的。
 
 使用形式为：
-> 对象名 ./-> 类名 虚函数名(实参表)
+> 对象名.类名::虚函数名(实参表)
 
 其中类名必须是这个对象名所属的类型以及这个类型的任意包含该虚函数的基类。
 
