📃 docs: updated the content of macro expand

--- a/files/第1章_预处理指令.md
+++ b/files/第1章_预处理指令.md
@@ -308,13 +308,18 @@ cout << ins; // 错误：ins已被删除，不存在名为ins的变量
 
 > 宏生效于定义时，宏的替换范围为所在文件内。是将其定义位置后的代码中的所有与该宏名相同的标识符(不管在什么位置)替换为其关联的词法元素串。
 
-> 宏的词法元素串可以包含宏名，也就是可以包含其他宏的名称。该宏生效时会按照展开顺序原则自动替换所用的其他宏。
+> 宏的词法元素串可以包含宏名，也就是可以包含其他宏的名称。该宏生效时会按照宏展开顺序原则依次进行宏展开。
 
 ```c++
 // 定义TYPE宏为int类型
 #define TYPE int
 // VAR_DEF宏嵌套TYPE宏用于变量定义
 #define VAR_DEF TYPE ins = 5;
+/*
+宏展开顺序为:
+1. 先展开VAR_DEF宏，为: TYPE ins = 5;
+2. 再展开TYPE宏, 为: int ins = 5;
+*/
 VAR_DEF
 std::cout << ins; // 输出5
 ```
@@ -360,19 +365,277 @@ cout << FUNC(ins,dou)
 
 > 宏调用中的实参标识符可以是空(也就是不填任何符号)，也可以是任何词法元素(比如说对象，其他的宏，甚至可以是该宏本身，所以宏可以嵌套使用)，该词法元素还可以是不存在于当前文件中的。
 
-对于参数宏的嵌套使用，预处理器是先替换展开最外面的宏，然后再是从左到右，逐个替换展开所有作为实参的宏。如果实参宏也是嵌套宏，则也按这个顺序进行展开，直至所有宏都完全展开为止。
+**预处理器的宏展开流程(展开顺序原则)为:**
+1. 首先，预处理器先对该宏进行一次词法元素串替换。
+2. 然后，对于为参数宏的宏来说，其所有自身为宏的实参，除了被字符串化运算符(`#`)以及词法元素粘贴运算符(`##`)所运算的以外(这些实参的标识符将直接进行相应的处理)，都将从左到右，以该流程进行宏展开(也就是直至该参数宏全部被展开)。
+3. 接着，预处理器继续对被展开的内容进行从左到右的扫描，对其中存在的宏(除了被`#`以及`##`所运算的以外)，以该流程进行宏展开(也就是直至该宏全部被展开)。
+4. 最终，所有被展开的内容将不再包含任何宏的调用。
 
 ```c++
-// 定义一个参数宏
-#define ADD(a,b) a + b
-/* 
-ADD(ADD(20,25),ADD(15,10))为参数宏的嵌套使用。
-首先替换展开最外面的参数宏，变为：
-ADD(20,25) + ADD(15,10)
-再从左到右，逐个替换展开所有的实参宏，最后宏全部展开，变为：
-20 + 25 + 15 + 10
-输出为70*/
-cout << ADD(ADD(20,25),ADD(15,10));
+#include <iostream>
+
+// 定义了一个普通宏
+#define NUMBER_MACRO_M1 66
+// 定义了一个字符串化参数宏，参数不进行宏展开
+#define STRINGIZE(x) #x
+// 定义了一个字符串化参数宏，参数进行宏展开
+#define STRINGIZE_VALUE_OF(x) STRINGIZE(x)
+// 定义了一个词法元素粘贴参数宏，参数不进行宏展开
+#define CONT(a, b) a ## b
+// 定义了一个词法元素粘贴参数宏，参数进行宏展开
+#define CONT_VALUE_OF(a, b) CONT(a,b)
+// 定义了一个加法参数宏，参数进行宏展开
+#define ADD(a, b) a + b
+// 定义了一个普通宏，该宏包含另一个宏
+#define IDENTIFIER_MACRO_M1 NUMBER_MACRO_
+// 定义了一个普通宏，该宏包含另一个宏
+#define IDENTIFIER_MACRO_M2 M1
+// 定义了一个普通宏
+#define IDENTIFIER_MACRO_M1IDENTIFIER_MACRO_M2 -1
+// 定义了一个普通宏
+#define NUMBER_MACRO_ 8
+// 定义了一个普通宏
+#define M1 7
+// 定义了一个比较参数宏，参数进行宏展开
+#define _MAX(x, y) (((x) > (y)) ? (x) : (y))
+// 定义了一个普通宏，该宏包含另一个宏
+#define MAX1 _MAX(1,
+// 定义了一个普通宏，该宏包含另一个宏
+#define MAX2 _MAX(2,0))
+// 定义了一个普通宏，该宏包含另一个宏
+#define MAX21 _MAX(2,0)
+// 定义了一个普通宏，该宏包含另一个宏
+#define RIGHT _MAX(1,_MAX(2,0))
+// 定义了一个普通宏，该宏包含另一个宏
+#define WRONG MAX1 MAX2
+// 定义了一个普通宏，该宏包含另一个宏
+#define WRONG2 MAX1 MAX21)
+// 定义了一个普通宏，该宏包含另一个宏，参数不进行宏展开
+#define CON_MACRO NUMBER_MACRO_ ## M1
+
+int main()
+{
+    /**
+     * 以下为展开演变:
+     * $ 20 + 25
+     * 
+     * 输出为:
+     * 45
+     */
+    std::cout << ADD(20,25) << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ (NUMBER_MACRO_ ## M1)
+     * $ NUMBER_MACRO_M1
+     * $ 66
+     * 
+     * 输出为:
+     * 66
+     */
+    std::cout << CON_MACRO << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ #(ADD(20,25))
+     * $ "ADD(20,25)"
+     * 
+     * 输出为:
+     * ADD(20,25)
+     */
+    std::cout << STRINGIZE(ADD(20,25)) << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ STRINGIZE(ADD(20,25))
+     * $ STRINGIZE(20 + 25)
+     *  $ #(20 + 25)
+     *  $ "20 + 25"
+     * 
+     * 输出为:
+     * 20 + 25
+     */
+    std::cout << STRINGIZE_VALUE_OF(ADD(20,25)) << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ CONT(NUMBER_MACRO_, M1) + 25
+     *  $ (NUMBER_MACRO_ ## M1) + 25
+     *  $ NUMBER_MACRO_M1 + 25
+     *  $ 66 + 25
+     * 
+     * 输出为:
+     * 91
+     */
+    std::cout << ADD(CONT(NUMBER_MACRO_, M1), 25) << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ CONT_VALUE_OF(NUMBER_MACRO_, M1) + 25
+     *  $ CONT(NUMBER_MACRO_,M1) + 25
+     *  $ CONT(8,7) + 25
+     *      $ (8 ## 7) + 25
+     *      $ 87 + 25
+     * 
+     * 输出为:
+     * 112
+     */
+    std::cout << ADD(CONT_VALUE_OF(NUMBER_MACRO_, M1), 25) << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ CONT(IDENTIFIER_MACRO_M1, IDENTIFIER_MACRO_M2) + 25
+     *  $ (IDENTIFIER_MACRO_M1 ## IDENTIFIER_MACRO_M2) + 25
+     *  $ IDENTIFIER_MACRO_M1IDENTIFIER_MACRO_M2 + 25
+     *  $ -1 + 25
+     * 
+     * 输出为:
+     * 24
+     */
+    std::cout << ADD(CONT(IDENTIFIER_MACRO_M1, IDENTIFIER_MACRO_M2), 25) << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ CONT_VALUE_OF(IDENTIFIER_MACRO_M1, IDENTIFIER_MACRO_M2) + 25
+     *  $ CONT(IDENTIFIER_MACRO_M1,IDENTIFIER_MACRO_M2) + 25
+     *  $ CONT(NUMBER_MACRO_,M1) + 25
+     *      $ (NUMBER_MACRO_ ## M1) + 25
+     *      $ NUMBER_MACRO_M1 + 25
+     *      $ 66 + 25
+     * 
+     * 输出为:
+     * 112
+     */
+    std::cout << ADD(CONT_VALUE_OF(IDENTIFIER_MACRO_M1, IDENTIFIER_MACRO_M2), 25) << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ #(CONT(NUMBER_MACRO_, M1))
+     * $ "CONT(NUMBER_MACRO_, M1)"
+     * 
+     * 输出为:
+     * CONT(NUMBER_MACRO_, M1)
+     */
+    std::cout << STRINGIZE(CONT(NUMBER_MACRO_, M1)) << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ #(CONT_VALUE_OF(NUMBER_MACRO_, M1))
+     * $ "CONT_VALUE_OF(NUMBER_MACRO_, M1)"
+     * 
+     * 输出为:
+     * CONT_VALUE_OF(NUMBER_MACRO_, M1)
+     */
+    std::cout << STRINGIZE(CONT_VALUE_OF(NUMBER_MACRO_, M1)) << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ #(CONT(IDENTIFIER_MACRO_M1, IDENTIFIER_MACRO_M2))
+     * $ "CONT(IDENTIFIER_MACRO_M1, IDENTIFIER_MACRO_M2)"
+     * 
+     * 输出为:
+     * CONT(IDENTIFIER_MACRO_M1, IDENTIFIER_MACRO_M2)
+     */
+    std::cout << STRINGIZE(CONT(IDENTIFIER_MACRO_M1, IDENTIFIER_MACRO_M2)) << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ #(CONT_VALUE_OF(IDENTIFIER_MACRO_M1, IDENTIFIER_MACRO_M2))
+     * $ "CONT_VALUE_OF(IDENTIFIER_MACRO_M1, IDENTIFIER_MACRO_M2)"
+     * 
+     * 输出为:
+     * CONT_VALUE_OF(IDENTIFIER_MACRO_M1, IDENTIFIER_MACRO_M2)
+     */
+    std::cout << STRINGIZE(CONT_VALUE_OF(IDENTIFIER_MACRO_M1, IDENTIFIER_MACRO_M2)) << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ STRINGIZE(CONT(NUMBER_MACRO_, M1))
+     *  $ STRINGIZE((NUMBER_MACRO_ ## M1))
+     *  $ STRINGIZE(NUMBER_MACRO_M1)
+     *  $ STRINGIZE(66)
+     * $ #(66)
+     * $ "66"
+     * 
+     * 输出为:
+     * 66
+     */
+    std::cout << STRINGIZE_VALUE_OF(CONT(NUMBER_MACRO_, M1)) << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ STRINGIZE(CONT_VALUE_OF(NUMBER_MACRO_, M1))
+     *  $ STRINGIZE(CONT(NUMBER_MACRO_, M1))
+     *  $ STRINGIZE(CONT(8, 7))
+     *  $ STRINGIZE((8 ## 7))
+     *  $ STRINGIZE(87)
+     * $ #(87)
+     * $ "87"
+     * 
+     * 输出为:
+     * 87
+     */
+    std::cout << STRINGIZE_VALUE_OF(CONT_VALUE_OF(NUMBER_MACRO_, M1)) << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ STRINGIZE(CONT(IDENTIFIER_MACRO_M1, IDENTIFIER_MACRO_M2))
+     *  $ STRINGIZE((IDENTIFIER_MACRO_M1 ## IDENTIFIER_MACRO_M2))
+     *  $ STRINGIZE(IDENTIFIER_MACRO_M1IDENTIFIER_MACRO_M2)
+     *  $ STRINGIZE(-1)
+     * $ #(-1)
+     * $ "-1"
+     * 
+     * 输出为:
+     * -1
+     */
+    std::cout << STRINGIZE_VALUE_OF(CONT(IDENTIFIER_MACRO_M1, IDENTIFIER_MACRO_M2)) << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ STRINGIZE(CONT_VALUE_OF(IDENTIFIER_MACRO_M1, IDENTIFIER_MACRO_M2))
+     *  $ STRINGIZE(CONT(IDENTIFIER_MACRO_M1, IDENTIFIER_MACRO_M2))
+     *  $ STRINGIZE(CONT(NUMBER_MACRO_, M1))
+     *  $ STRINGIZE(CONT(8, 7))
+     *  $ STRINGIZE((8 ## 7))
+     *  $ STRINGIZE(87)
+     * $ #(87)
+     * $ "87"
+     * 
+     * 输出为:
+     * 87
+     */
+    std::cout << STRINGIZE_VALUE_OF(CONT_VALUE_OF(IDENTIFIER_MACRO_M1, IDENTIFIER_MACRO_M2)) << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ ADD(20,25) + ADD(15,10)
+     * $ 20 + 25 + ADD(15,10)
+     * $ 20 + 25 + 15 + 10
+     * 
+     * 输出为:
+     * 70
+     */
+    std::cout << ADD(ADD(20,25),ADD(15,10)) << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ _MAX(1,_MAX(2,0))
+     * $ (((1) > (_MAX(2,0))) ? (1) : (_MAX(2,0)))
+     *  $ (((1) > ((((2) > (0)) ? (2) : (0)))) ? (1) : (_MAX(2,0)))
+     *  $ (((1) > ((((2) > (0)) ? (2) : (0)))) ? (1) : ((((2) > (0)) ? (2) : (0))))
+     * 
+     * 输出为:
+     * 2
+     */
+    std::cout << RIGHT << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ MAX1 MAX21)
+     * $ _MAX(1, MAX21)
+     *  $ (((1) > (MAX21)) ? (1) : (MAX21))
+     *  $ (((1) > (_MAX(2,0))) ? (1) : (_MAX(2,0)))
+     *      $ (((1) > ((((2) > (0)) ? (2) : (0)))) ? (1) : (_MAX(2,0)))
+     *      $ (((1) > ((((2) > (0)) ? (2) : (0)))) ? (1) : ((((2) > (0)) ? (2) : (0))))
+     * 
+     * 输出为:
+     * 2
+     */
+    std::cout << WRONG2 << std::endl;
+    /**
+     * 以下为展开演变:
+     * $ MAX1 MAX2
+     * $ _MAX(1, MAX2
+     * $ error occurred!
+     * 
+     * 编译错误：因为按照展开顺序原则，MAX1先被展开，展开后为_MAX参数宏，当想展开_MAX参数宏时因为格式不正确导致出错。
+     */
+    std::cout << WRONG << std::endl;
+    return 0;
+}
 ```
 
 > 要注意非字符串的实参标识符中不能直接含有逗号`,`，必须要用( ) ' "几个标点符号将逗号`,`包围起来。
