📃 docs: chap 13: template instantiation explanation

--- a/files/第13章_分离式编译.md
+++ b/files/第13章_分离式编译.md
@@ -93,23 +93,25 @@ int main()
         编译器生成的实例包含该函数的定义。
     1. 编译器实例化模板的时机：
          * 当遇到模板或者模板部分特例化的声明以及定义语句时，编译器不进行实例化。
-         * 当遇到使用非类模板的模板语句，且该语句不是显式实例化定义或者全部特例化时，编译器还是按常规进行声明检查：
-            * 如果满足任意以下一项，则编译器不会生成任何实例：
+         * 当遇到使用非类模板的模板语句(隐式实例化)，且该语句不是显式实例化定义或者全部特例化时，编译器还是按常规进行声明检查：
+            * 如果满足以下任意一项，则编译器不会生成任何实例，否则编译器就会生成对应的实例定义：
                 1. 该模板只有声明而不存在定义。
-                2. 该文件中已存在使用的对应声明的**实例声明**。
-                3. 同作用域中存在使用的对应声明的显式实例化定义。
-            * 如果该模板存在定义，且该文件中不存在使用的对应声明的**实例声明**时，就生成对应的实例定义。
+                2. 同作用域中已存在该处所使用的对应的**实例声明**。
+                3. 同作用域中已存在该处所使用的对应的**实例定义**(由其他隐式或显式实例化所产生的)。
          * 当遇到全部特例化的声明或定义语句时：
-            如果满足任意以下一项，则会编译出错，否则编译器会生成对应特殊实例的声明或定义：
+            如果满足以下任意一项，则会编译出错，否则编译器就会生成对应特殊实例的声明或定义：
             1. 原始模板的声明不存在时。
-            2. 该特例化语句是定义语句，且该文件中已存在该特例化对应的**实例定义**。
+            2. 该特例化语句是定义语句，且该文件中已存在该特例化对应的**实例定义**(由其他隐式或显式实例化所产生的)。
 
             对于全部特例化声明所生成的特殊实例声明，后续会在链接阶段与该模板的其他同声明的实例定义链接上。
          * 当遇到显式实例化的定义语句时：
-            * 如果满足任意以下一项，则会编译出错：
-                1. 该模板不存在定义。
-                2. 该文件中不存在该显式实例化对应的**实例声明**，且同作用域中存在与其相同的显式实例化定义。
-            * 如果该模板既存在声明也存在定义，但该文件中已存在该显式实例化对应的**实例声明**时，则不会生成任何实例；否则就生成对应的实例定义。
+            * 如果满足以下任意一项，则会编译出错：
+                1. 同作用域中不存在该模板的定义。
+                2. 同作用域中已存在同与其相同的显式实例化定义。
+            * 如果满足以下任意一项，则编译器不会生成对应的实例：
+                1. 同作用域中已存在该处所使用的对应的**实例定义**(由其他隐式实例化所产生的)。
+
+            否则，编译器就会生成对应的实例定义。
 
       所以为了生成一个模板的实例，编译器可能既需要模板自身的定义，也需要模板成员的定义。因此与其他对象不同的是，模板通常将其声明和定义放在同一个文件中。
 
